# NirnLabUIPlatform

./: CMakeLists.txt  vcpkg.json
cmake/: NirnLabUIPlatform-config.cmake.in  set_compile_options.cmake
overlay_ports/commonlib/: portfile.cmake  vcpkg.json
overlay_ports/commonlibae/: portfile.cmake  vcpkg.json
src/CEFSubprocess/: CMakeLists.txt  vcpkg.json
src/CEFSubprocess/CEF/: NirnLabSubprocessCefApp.cpp
src/CEFSubprocess/JS/: CEFFunctionQueue.h
src/UIPlatform/: PCH.h  main.cpp
src/UIPlatform/CEF/: DefaultBrowser.cpp  NirnLabCefApp.cpp  NirnLabCefClient.cpp  NirnLabCefClient.h
src/UIPlatform/Controllers/: PublicAPIController.cpp  PublicAPIController.h
src/UIPlatform/JS/: JSFunctionStorage.cpp
src/UIPlatform/Menus/: CEFMenu.cpp  CEFMenu.h  MultiLayerMenu.cpp
src/UIPlatform/NirnLabUIPlatformAPI/: API.h  Version.h
src/UIPlatform/Render/: CEFCopyRenderLayer.cpp  CEFCopyRenderLayer.h  CEFRenderLayer.cpp  CEFRenderLayer.h  DebugRenderLayer.cpp  DebugRenderLayer.h  IRenderLayer.h  RenderData.h  RussoCEFRenderLayer.cpp  RussoCEFRenderLayer.h
src/UIPlatform/Utils/: D3D11Utils.cpp  D3D11Utils.h
src/UIPlatformTest/: PCH.h  main.cpp
src/UIPlatformTest/NirnLabUIPlatformAPI/: API.h  DllLoader.h  Version.h
src/UIPlugin/: main.cpp
